Phase 3/src/main/parsers/actonParser.java
// Generated from /Users/apple/repos/Phase 3/src/acton.g4 by ANTLR 4.7.2

    package main.parsers;
    import main.ast.node.*;
    import main.ast.node.declaration.*;
    import main.ast.node.declaration.handler.*;
    import main.ast.node.statement.*;
    import main.ast.node.expression.*;
    import main.ast.node.expression.operators.*;
    import main.ast.node.expression.values.*;
    import main.ast.type.primitiveType.*;
    import main.ast.type.arrayType.*;
    import main.ast.type.actorType.*;
    import main.ast.type.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class actonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INTVAL=1, STRINGVAL=2, TRUE=3, FALSE=4, INT=5, BOOLEAN=6, STRING=7, ACTOR=8, 
		EXTENDS=9, ACTORVARS=10, KNOWNACTORS=11, INITIAL=12, MSGHANDLER=13, SENDER=14, 
		SELF=15, MAIN=16, FOR=17, CONTINUE=18, BREAK=19, IF=20, ELSE=21, PRINT=22, 
		LPAREN=23, RPAREN=24, LBRACE=25, RBRACE=26, LBRACKET=27, RBRACKET=28, 
		COLON=29, SEMICOLON=30, COMMA=31, DOT=32, ASSIGN=33, EQ=34, NEQ=35, GT=36, 
		LT=37, PLUSPLUS=38, MINUSMINUS=39, PLUS=40, MINUS=41, MULT=42, DIV=43, 
		PERCENT=44, NOT=45, AND=46, OR=47, QUES=48, IDENTIFIER=49, COMMENT=50, 
		WHITESPACE=51;
	public static final int
		RULE_program = 0, RULE_actorDeclaration = 1, RULE_mainDeclaration = 2, 
		RULE_actorInstantiation = 3, RULE_initHandlerDeclaration = 4, RULE_msgHandlerDeclaration = 5, 
		RULE_argDeclarations = 6, RULE_varDeclarations = 7, RULE_varDeclaration = 8, 
		RULE_statement = 9, RULE_blockStmt = 10, RULE_printStmt = 11, RULE_assignStmt = 12, 
		RULE_assignment = 13, RULE_forStmt = 14, RULE_ifStmt = 15, RULE_continueStmt = 16, 
		RULE_breakStmt = 17, RULE_msgHandlerCall = 18, RULE_expression = 19, RULE_orExpression = 20, 
		RULE_andExpression = 21, RULE_equalityExpression = 22, RULE_relationalExpression = 23, 
		RULE_additiveExpression = 24, RULE_multiplicativeExpression = 25, RULE_preUnaryExpression = 26, 
		RULE_postUnaryExpression = 27, RULE_postUnaryOp = 28, RULE_otherExpression = 29, 
		RULE_arrayCall = 30, RULE_actorVarAccess = 31, RULE_expressionList = 32, 
		RULE_identifier = 33, RULE_value = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "actorDeclaration", "mainDeclaration", "actorInstantiation", 
			"initHandlerDeclaration", "msgHandlerDeclaration", "argDeclarations", 
			"varDeclarations", "varDeclaration", "statement", "blockStmt", "printStmt", 
			"assignStmt", "assignment", "forStmt", "ifStmt", "continueStmt", "breakStmt", 
			"msgHandlerCall", "expression", "orExpression", "andExpression", "equalityExpression", 
			"relationalExpression", "additiveExpression", "multiplicativeExpression", 
			"preUnaryExpression", "postUnaryExpression", "postUnaryOp", "otherExpression", 
			"arrayCall", "actorVarAccess", "expressionList", "identifier", "value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'true'", "'false'", "'int'", "'boolean'", "'string'", 
			"'actor'", "'extends'", "'actorvars'", "'knownactors'", "'initial'", 
			"'msghandler'", "'sender'", "'self'", "'main'", "'for'", "'continue'", 
			"'break'", "'if'", "'else'", "'print'", "'('", "')'", "'{'", "'}'", "'['", 
			"']'", "':'", "';'", "','", "'.'", "'='", "'=='", "'!='", "'>'", "'<'", 
			"'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
			"'?'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INTVAL", "STRINGVAL", "TRUE", "FALSE", "INT", "BOOLEAN", "STRING", 
			"ACTOR", "EXTENDS", "ACTORVARS", "KNOWNACTORS", "INITIAL", "MSGHANDLER", 
			"SENDER", "SELF", "MAIN", "FOR", "CONTINUE", "BREAK", "IF", "ELSE", "PRINT", 
			"LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "COLON", 
			"SEMICOLON", "COMMA", "DOT", "ASSIGN", "EQ", "NEQ", "GT", "LT", "PLUSPLUS", 
			"MINUSMINUS", "PLUS", "MINUS", "MULT", "DIV", "PERCENT", "NOT", "AND", 
			"OR", "QUES", "IDENTIFIER", "COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "acton.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public actonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program p;
		public ActorDeclarationContext actordec;
		public MainDeclarationContext programMain;
		public MainDeclarationContext mainDeclaration() {
			return getRuleContext(MainDeclarationContext.class,0);
		}
		public List<ActorDeclarationContext> actorDeclaration() {
			return getRuleContexts(ActorDeclarationContext.class);
		}
		public ActorDeclarationContext actorDeclaration(int i) {
			return getRuleContext(ActorDeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof actonListener ) ((actonListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof actonListener ) ((actonListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((ProgramContext)_localctx).p =  new Program();
			setState(74); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(71);
				((ProgramContext)_localctx).actordec = actorDeclaration();
				_localctx.p.addActor(((ProgramContext)_localctx).actordec.actordec);
				}
				}
				setState(76); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ACTOR );
			setState(78);
			((ProgramContext)_localctx).programMain = mainDeclaration();
			_localctx.p.setMain(((ProgramContext)_localctx).programMain.main);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActorDeclarationContext extends ParserRuleContext {
		public ActorDeclaration actordec;
		public Token a;
		public IdentifierContext name;
		public IdentifierContext pname;
		public Token queue;
		public IdentifierContext actor;
		public VarDeclarationsContext vardecs;
		public InitHandlerDeclarationContext inithandler;
		public MsgHandlerDeclarationContext msghandler;
		public TerminalNode LPAREN() { return getToken(actonParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(actonParser.RPAREN, 0); }
		public List<TerminalNode> LBRACE() { return getTokens(actonParser.LBRACE); }
		public TerminalNode LBRACE(int i) {
			return getToken(actonParser.LBRACE, i);
		}
		public List<TerminalNode> RBRACE() { return getTokens(actonParser.RBRACE); }
		public TerminalNode RBRACE(int i) {
			return getToken(actonParser.RBRACE, i);
		}
		public TerminalNode ACTOR() { return getToken(actonParser.ACTOR, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode INTVAL() { return getToken(actonParser.INTVAL, 0); }
		public TerminalNode KNOWNACTORS() { return getToken(actonParser.KNOWNACTORS, 0); }
		public TerminalNode ACTORVARS() { return getToken(actonParser.ACTORVARS, 0); }
		public TerminalNode EXTENDS() { return getToken(actonParser.EXTENDS, 0); }
		public VarDeclarationsContext varDeclarations() {
			return getRuleContext(VarDeclarationsContext.class,0);
		}
		public InitHandlerDeclarationContext initHandlerDeclaration() {
			return getRuleContext(InitHandlerDeclarationContext.class,0);
		}
		public List<MsgHandlerDeclarationContext> msgHandlerDeclaration() {
			return getRuleContexts(MsgHandlerDeclarationContext.class);
		}
		public MsgHandlerDeclarationContext msgHandlerDeclaration(int i) {
			return getRuleContext(MsgHandlerDeclarationContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(actonParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(actonParser.SEMICOLON, i);
		}
		public ActorDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actorDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof actonListener ) ((actonListener)listener).enterActorDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof actonListener ) ((actonListener)listener).exitActorDeclaration(this);
		}
	}

	public final ActorDeclarationContext actorDeclaration() throws RecognitionException {
		ActorDeclarationContext _localctx = new ActorDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_actorDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			((ActorDeclarationContext)_localctx).a = match(ACTOR);
			setState(82);
			((ActorDeclarationContext)_localctx).name = identifier();
			((ActorDeclarationContext)_localctx).actordec =  new ActorDeclaration(((ActorDeclarationContext)_localctx).name.id); _localctx.actordec.setLine(((ActorDeclarationContext)_localctx).a.getLine());
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(84);
				match(EXTENDS);
				setState(85);
				((ActorDeclarationContext)_localctx).pname = identifier();
				_localctx.actordec.setParentName(((ActorDeclarationContext)_localctx).pname.id);
				}
			}

			setState(90);
			match(LPAREN);
			setState(91);
			((ActorDeclarationContext)_localctx).queue = match(INTVAL);
			setState(92);
			match(RPAREN);
			_localctx.actordec.setQueueSize((((ActorDeclarationContext)_localctx).queue!=null?Integer.valueOf(((ActorDeclarationContext)_localctx).queue.getText()):0));
			setState(94);
			match(LBRACE);
			{
			setState(95);
			match(KNOWNACTORS);
			setState(96);
			match(LBRACE);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(97);
				((ActorDeclarationContext)_localctx).actor = identifier();
				setState(98);
				((ActorDeclarationContext)_localctx).name = identifier();
				setState(99);
				match(SEMICOLON);

				                VarDeclaration knownActor = new VarDeclaration(((ActorDeclarationContext)_localctx).name.id, new ActorType(((ActorDeclarationContext)_localctx).actor.id));
				                knownActor.setLine(((ActorDeclarationContext)_localctx).actor.id.getLine());
				                _localctx.actordec.addKnownActor(knownActor);
				            
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(107);
			match(RBRACE);
			}
			{
			setState(109);
			match(ACTORVARS);
			setState(110);
			match(LBRACE);
			setState(111);
			((ActorDeclarationContext)_localctx).vardecs = varDeclarations();
			_localctx.actordec.setActorVars(((ActorDeclarationContext)_localctx).vardecs.vardecs);
			setState(113);
			match(RBRACE);
			}
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(115);
				((ActorDeclarationContext)_localctx).inithandler = initHandlerDeclaration();
				_localctx.actordec.setInitHandler(((ActorDeclarationContext)_localctx).inithandler.inithandler);
				}
				break;
			}
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MSGHANDLER) {
				{
				{
				setState(120);
				((ActorDeclarationContext)_localctx).msghandler = msgHandlerDeclaration();
				_localctx.actordec.addMsgHandler(((ActorDeclarationContext)_localctx).msghandler.msghandler);
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainDeclarationContext extends ParserRuleContext {
		public Main main;
		public Token m;
		public ActorInstantiationContext actorInst;
		public TerminalNode LBRACE() { return getToken(actonParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(actonParser.RBRACE, 0); }
		public TerminalNode MAIN() { return getToken(actonParser.MAIN, 0); }
		public List<ActorInstantiationContext> actorInstantiation() {
			return getRuleContexts(ActorInstantiationContext.class);
		}
		public ActorInstantiationContext actorInstantiation(int i) {
			return getRuleContext(ActorInstantiationContext.class,i);
		}
		public MainDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof actonListener ) ((actonListener)listener).enterMainDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof actonListener ) ((actonListener)listener).exitMainDeclaration(this);
		}
	}

	public final MainDeclarationContext mainDeclaration() throws RecognitionException {
		MainDeclarationContext _localctx = new MainDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mainDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((MainDeclarationContext)_localctx).main =  new Main();
			setState(131);
			((MainDeclarationContext)_localctx).m = match(MAIN);
			_localctx.main.setLine(((MainDeclarationContext)_localctx).m.getLine());
			setState(133);
			match(LBRACE);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(134);
				((MainDeclarationContext)_localctx).actorInst = actorInstantiation();
				_localctx.main.addActorInstantiation(((MainDeclarationContext)_localctx).actorInst.actorInst);
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(142);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
